Updates patterns and assets

--- a/src/patterns/__environment__/20-atoms/01-list~bulleted.hbs
+++ b/src/patterns/__environment__/20-atoms/01-list~bulleted.hbs
@@ -4,7 +4,7 @@
     {{#if href}}
       {{#if data}}{{> atoms-link label=data }}{{else}}{{> atoms-link }}{{/if}}
     {{else if data}}
-      {{#if markdown}}{{{markdown data}}}{{else}}{{data}}{{/if}}
+      {{#if this.markdown}}{{{markdown data}}}{{else}}{{data}}{{/if}}
     {{else}}
       {{this}}
     {{/if}}
