--- a/src/patterns/__environment__/20-atoms/callout.hbs
+++ b/src/patterns/__environment__/20-atoms/callout.hbs
@@ -1,1 +1,1 @@
-<div class="callout">{{#if markdown}}{{{markdown text}}}{{else}}{{text}}{{/if}}</div>
+<div class="callout">{{#if this.markdown}}{{{markdown text}}}{{else}}{{text}}{{/if}}</div>
