--- a/src/patterns/__environment__/20-atoms/note.hbs
+++ b/src/patterns/__environment__/20-atoms/note.hbs
@@ -1,1 +1,1 @@
-<div class="note" data-label="{{default label "Note"}}">{{#if markdown}}{{{markdown text}}}{{else}}{{text}}{{/if}}</div>
+<div class="note" data-label="{{default label "Note"}}">{{#if this.markdown}}{{{markdown text}}}{{else}}{{text}}{{/if}}</div>
