--- a/src/patterns/__environment__/40-compounds/related~cards.hbs
+++ b/src/patterns/__environment__/40-compounds/related~cards.hbs
@@ -1,6 +1,6 @@
 <div class="related">
 
-  <h6 class="related-title">{{default title 'Related'}}</h6>
+  <h6 class="related-title">{{default heading 'Related'}}</h6>
 
   {{> compounds-cards classes='related-content'}}
 
