--- a/src/patterns/__environment__/60-templates/info.hbs
+++ b/src/patterns/__environment__/60-templates/info.hbs
@@ -1,5 +1,5 @@
 <div class="info-page">
   <header class="info-page-header"></header>
-  {{> organisms-main classes="info-page-main"}}
+  {{> organisms-main type="info-page" classes="info-page-main"}}
   <footer class="info-page-footer"></footer>
 </div>
