--- a/src/engine/__environment__/layout/default.hbs
+++ b/src/engine/__environment__/layout/default.hbs
@@ -12,13 +12,10 @@
 </head>
 <body>
   
-  <div id="eul-vue">
+  {{template}}
   
-    {{template}}
-    
-  </div>
-  
-  <script src="{{baseUrl}}/js/bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/arrive/2.4.1/arrive.min.js"></script>
+  <script src="{{baseUrl}}/js/bundle.js"></script>
   
 </body>
 </html>
