Updates patterns and assets

--- a/src/patterns/__environment__/20-atoms/01-tab.hbs
+++ b/src/patterns/__environment__/20-atoms/01-tab.hbs
@@ -1,3 +1,4 @@
+<div class="eul-vue">
 <eul-tab inline-template :defaults="{
                             isDisabled: {{default disabled false}},
                             isActive: {{default active false}},
@@ -23,3 +24,4 @@
   </button>
 
 </eul-tab>
+</div>
