--- a/src/patterns/__environment__/20-atoms/02-button~action.hbs
+++ b/src/patterns/__environment__/20-atoms/02-button~action.hbs
@@ -1,3 +1,4 @@
+<div class="eul-vue">
 <eul-button inline-template :defaults="{
                               isDisabled: {{default disabled false}},
                               isActive: {{default active false}},
@@ -25,3 +26,4 @@
   </button>
 
 </eul-button>
+</div>
