--- a/src/patterns/__environment__/20-atoms/30-search.hbs
+++ b/src/patterns/__environment__/20-atoms/30-search.hbs
@@ -1,4 +1,5 @@
 {{#unless form}}
+<div class="eul-vue">
 <eul-search inline-template
             :services="{{JSONstringify services}}"
             :param="'{{default param ':query'}}'"
@@ -64,6 +65,7 @@
   </div>
 
 </eul-search>
+</div>
 {{/unless}}
 
 {{#unless form}}<noscript>{{/unless}}
