--- a/src/patterns/__environment__/20-atoms/map.hbs
+++ b/src/patterns/__environment__/20-atoms/map.hbs
@@ -1,3 +1,4 @@
+<div class="eul-vue">
 <div class="map-frame{{#if (and size size.fixed)}} -h-fixed{{/if}}"{{#if (and size (or size.width size.height))}} style="{{#if size.width}}--width: {{size.width}};{{/if}}{{#if size.height}}--height: {{size.height}};{{/if}}"{{/if}}>
 
   {{#if mapId }}
@@ -37,4 +38,4 @@
   {{/if}}
 
 </div>
-
+</div>
