--- a/src/patterns/__environment__/30-molecules/alert.hbs
+++ b/src/patterns/__environment__/30-molecules/alert.hbs
@@ -1,3 +1,4 @@
+<div class="eul-vue">
 <eul-alert inline-template :uid="'{{uid}}'" :defaults="{
                                               isDismissible: {{default dismissible true}}
                                             }">
@@ -21,3 +22,4 @@
   </transition>
 
 </eul-alert>
+</div>
