--- a/src/patterns/__environment__/30-molecules/notification.hbs
+++ b/src/patterns/__environment__/30-molecules/notification.hbs
@@ -1,3 +1,4 @@
+<div class="eul-vue">
 <eul-notification inline-template :uid="'{{uid}}'" :defaults="{
                                                       isDismissible: {{default dismissible true}}
                                                     }">
@@ -21,3 +22,4 @@
   </transition>
 
 </eul-notification>
+</div>
