--- a/src/patterns/__environment__/40-compounds/accordion.hbs
+++ b/src/patterns/__environment__/40-compounds/accordion.hbs
@@ -1,5 +1,6 @@
 {{#unless (and (eq showall false) (eq hideall false))}}
 
+  <div class="eul-vue">
   <eul-accordion inline-template>
 
     <div class="accordion">
@@ -26,6 +27,7 @@
     </div>
 
   </eul-accordion>
+  </div>
 
   <noscript>
 
