--- a/src/patterns/__environment__/20-atoms/23-subnav-button~viewall.hbs
+++ b/src/patterns/__environment__/20-atoms/23-subnav-button~viewall.hbs
@@ -1,6 +1,7 @@
 {{#unless overflow}}
 {{> atoms-subnav-button-main viewall=true}}
 {{else}}
+<div class="eul-vue">
 <eul-subnav-viewall inline-template :defaults="{
                                       isDisabled: {{default disabled false}},
                                       isActive: {{default active false}},
@@ -30,4 +31,5 @@
   </label>
 
 </eul-subnav-viewall>
+</div>
 {{/unless}}
