--- a/src/patterns/__environment__/20-atoms/filter~dropdown.hbs
+++ b/src/patterns/__environment__/20-atoms/filter~dropdown.hbs
@@ -2,6 +2,7 @@
   {{assign 'index' (passthrough index passthroughs)}}
 {{/if}}
 
+<div class="eul-vue">
 <eul-filter-dropdown inline-template
                      :index="{{JSONstringify index}}"
                      :field="'{{key}}'"
@@ -50,3 +51,4 @@
   </div>
 
 </eul-filter-dropdown>
+</div>
