Revert "Updates layout to exclude vue wrapper since vue components will need to be self-contained"
This reverts commit dc39cf6b76cce20988cf2e5f184bb2a513858a1e.

--- a/src/engine/__environment__/layout/default.hbs
+++ b/src/engine/__environment__/layout/default.hbs
@@ -12,10 +12,13 @@
 </head>
 <body>
   
-  {{template}}
+  <div id="eul-vue">
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/arrive/2.4.1/arrive.min.js"></script>
-  <script src="{{baseUrl}}/js/bundle.js"></script>
+    {{template}}
+    
+  </div>
+  
+  <script src="{{baseUrl}}/js/bundle.min.js"></script>
   
 </body>
 </html>
