Updates patterns and assets to instantiate a single Vue

--- a/src/engine/__environment__/layout/default.hbs
+++ b/src/engine/__environment__/layout/default.hbs
@@ -12,11 +12,7 @@
 </head>
 <body>
   
-  <div id="eul-vue">
-  
-    {{template}}
-    
-  </div>
+  <div id="eul-vue">{{template}}</div>
   
   <script src="{{baseUrl}}/js/bundle.min.js"></script>
   
