Updates patterns and assets

--- a/src/patterns/__environment__/20-atoms/filter~dropdown.hbs
+++ b/src/patterns/__environment__/20-atoms/filter~dropdown.hbs
@@ -42,7 +42,7 @@
     <a @click="cancel"
        @keypress.enter="cancel"
        class="link -underline"
-       v-show="fuzzy && fuzzy.filtering.filtered && valid"
+       v-show="valid"
        tabindex="0">
       Cancel
     </a>
