--- a/src/patterns/__environment__/30-molecules/card~librarian.hbs
+++ b/src/patterns/__environment__/30-molecules/card~librarian.hbs
@@ -1,50 +1,60 @@
 <div class="card-librarian"{{#if filterable}} data-search-id="{{id}}"{{/if}}>
   <div class="card-librarian-about">
-    <a href="{{link.href}}" class="card-librarian-image">{{> atoms-image src=(default image.src (combine '/images/avatars/placeholder.' (default gender 'male') '.jpg')) alt=name}}</a>
-    {{#with link}}{{> atoms-link label=../name classes="card-librarian-name"}}{{/with}}
+    <a href="{{baseUrl}}{{link.href}}" class="card-librarian-image">{{> atoms-image src=(combine (baseUrl) (default image.src (combine '/images/avatars/placeholder.' (default gender 'male') '.jpg'))) alt=name}}</a>
+    {{#with link}}{{> atoms-link href=(combine (baseUrl) href) label=../name classes="card-librarian-name" icon=false}}{{/with}}
     <span class="card-librarian-title"
           {{#if filterable}} data-search-key="title"{{/if}}>
       {{title}}
     </span>
+    {{#if library}}
     <span class="card-librarian-library"
           {{#if filterable}} data-search-key="library"{{/if}}>
       {{#if (isArray library)}}{{join library ', '}}{{else}}{{library}}{{/if}}
     </span>
+    {{/if}}
   </div>
   <div class="card-librarian-subjects">
     <span class="card-librarian-context">Subject Areas</span>
     <ul class="card-librarian-subjects-list">
-      {{#each subjects as |subject|}}
+      {{#if subjects}}
+      {{#each subjects}}
       <li class="card-librarian-subjects-list-item"
           {{#if ../filterable}} data-search-key="subjects"{{/if}}>
-        {{> atoms-link label=subject href=(combine '?subject=' (plusify subject))}}
+        {{#with (objectify label=this href=(combine '?subject=' (plusify this)))}}
+          {{> atoms-link classes="" icon=false}}
+        {{/with}}
       </li>
       {{/each}}
+      {{/if}}
     </ul>
   </div>
   <div class="card-librarian-contact">
     <span class="card-librarian-context">Contact</span>
     <ul class="card-librarian-contact-info">
+      {{#if phone}}
       <li class="card-librarian-contact-info-item"
           {{#if filterable}} data-search-key="phone"{{/if}}>
         {{> tokens-icon id='material-phone'}}
-        {{> atoms-link href=(combine 'tel:+' phone) label=(formatPhone phone '000-000-0000')}}
+        {{> atoms-link href=(combine 'tel:+' phone) label=(formatPhone phone '000-000-0000') classes="" icon=false}}
       </li>
+      {{/if}}
+      {{#if email}}
       <li class="card-librarian-contact-info-item"
           {{#if filterable}} data-search-key="email"{{/if}}>
         {{> tokens-icon id='material-email'}}
-        {{> atoms-link href=(combine 'mailto:' email) label=email}}
-      </li>
-    </ul>
-    <ul class="card-librarian-contact-links">
-      {{#if cv}}
-      <li class="card-librarian-contact-links-item">
-        {{#with cv}}{{> atoms-link label='Download CV'}}{{/with}}
+        {{> atoms-link href=(combine 'mailto:' email) label=email classes="" icon=false}}
       </li>
       {{/if}}
-      {{#if guides}}
+    </ul>
+    <ul class="card-librarian-contact-links">
+      {{#if (and cv cv.href)}}
       <li class="card-librarian-contact-links-item">
-        {{#with guides}}{{> atoms-link label='View Research Guides'}}{{/with}}
+        {{#with cv}}{{> atoms-link label='Download CV' classes="" icon=false}}{{/with}}
+      </li>
+      {{/if}}
+      {{#if (and guides guides.href)}}
+      <li class="card-librarian-contact-links-item">
+        {{#with guides}}{{> atoms-link label='View Research Guides' classes="" icon=false}}{{/with}}
       </li>
       {{/if}}
     </ul>
