--- a/src/patterns/__environment__/20-atoms/01-badge.hbs
+++ b/src/patterns/__environment__/20-atoms/01-badge.hbs
@@ -1,3 +1,3 @@
-<div class="badge{{#if square}} -square{{/if}}{{#if round}} -round{{/if}}{{#if white}} -white{{/if}}">
+<div class="badge{{#if square}} -square{{/if}}{{#if round}} -round{{/if}}{{#if white}} -white{{/if}}{{#if classes}} {{classes}}{{/if}}">
   {{label}}
 </div>
