Updates patterns and assets

--- a/src/patterns/__environment__/40-compounds/sidebar-list.hbs
+++ b/src/patterns/__environment__/40-compounds/sidebar-list.hbs
@@ -1,11 +1,13 @@
-<div class="sidebar-list{{#if divider}}{{#if divider.start}} -divider-start{{/if}}{{#if divider.end}} -divider-end{{/if}}{{/if}}">
+<div class="sidebar-list">
 
   {{#each sections}}
-  <div class="sidebar-list-section">
+  <div class="sidebar-list-section{{#if ../divider}}{{#if (and ../divider.start @first)}} -divider-start{{/if}}{{#if (and ../divider.end @last)}} -divider-end{{/if}}{{/if}}">
+    {{#if title}}
     <span class="sidebar-list-section-title{{#if icon}} has-icon{{/if}}">
       {{#if icon}}{{> tokens-icon id=icon}}{{/if}}
       {{title}}
     </span>
+    {{/if}}
     <div class="sidebar-list-section-content">
       {{#if (isArray this.content)}}
         <ul class="list">
@@ -16,8 +18,13 @@
       {{/if}}
       {{#if link}}
         {{#with link}}{{> atoms-link}}{{/with}}
-      {{else if button}}
+      {{else if links}}
+        {{#each links}}{{> atoms-link}}{{/each}}
+      {{/if}}
+      {{#if button}}
         {{#with button}}{{> atoms-button-link icon=false}}{{/with}}
+      {{else if buttons}}
+        {{#each buttons}}{{> atoms-button-link icon=false}}{{/each}}
       {{/if}}
     </div>
   </div>
