--- a/src/patterns/__environment__/60-templates/staff-directory.hbs
+++ b/src/patterns/__environment__/60-templates/staff-directory.hbs
@@ -5,63 +5,60 @@
   {{#if config }}
 
     {{! Handle config data given in array form. }}
-    {{#if (isArray config)}}
+  {{#if (isArray config)}}
 
-      {{! Determine if the librarian has some image data. }}
-      {{#inArray config 'Profile Photo'}}
-        {{assign 'config.image' true}}
-        {{unassign (combine 'config.' (indexOf config 'Profile Photo'))}}
-      {{else}}
-        {{assign 'config.image' false}}
-      {{/inArray}}
+    {{! Determine if the librarian has some image data. }}
+    {{#if (not (eq (indexOf config 'Profile Photo') false))}}
+      {{assign '_config.image' true}}
+    {{else}}
+      {{assign '_config.image' false}}
+    {{/if}}
 
-      {{! Determine if the librarian has some quote data. }}
-      {{#inArray config 'Quote'}}
-        {{assign 'config.quote' true}}
-        {{unassign (combine 'config.' (indexOf config 'Quote'))}}
-      {{else}}
-        {{assign 'config.quote' false}}
-      {{/inArray}}
+    {{! Determine if the librarian has some quote data. }}
+    {{#if (not (eq (indexOf config 'Quote') false))}}
+      {{assign '_config.quote' true}}
+    {{else}}
+      {{assign '_config.quote' false}}
+    {{/if}}
 
-      {{! Determine if the librarian has some bio data. }}
-      {{#inArray config 'Description'}}
-        {{assign 'config.bio' true}}
-        {{unassign (combine 'config.' (indexOf config 'Description'))}}
-      {{else}}
-        {{assign 'config.bio' false}}
-      {{/inArray}}
+    {{! Determine if the librarian has some bio data. }}
+    {{#if (not (eq (indexOf config 'Description') false))}}
+      {{assign '_config.bio' true}}
+    {{else}}
+      {{assign '_config.bio' false}}
+    {{/if}}
 
-      {{! Determine if the librarian has some education data. }}
-      {{#inArray config 'Education'}}
-        {{assign 'config.education' true}}
-        {{unassign (combine 'config.' (indexOf config 'Education'))}}
-      {{else}}
-        {{assign 'config.education' false}}
-      {{/inArray}}
+    {{! Determine if the librarian has some education data. }}
+    {{#if (not (eq (indexOf config 'Education') false))}}
+      {{assign '_config.education' true}}
+    {{else}}
+      {{assign '_config.education' false}}
+    {{/if}}
 
-      {{! Determine if the librarian has some contact info data. }}
-      {{#inArray config 'Contact Info'}}
-        {{assign 'config.contact' true}}
-        {{unassign (combine 'config.' (indexOf config 'Contact Info'))}}
-      {{else}}
-        {{assign 'config.contact' false}}
-      {{/inArray}}
+    {{! Determine if the librarian has some contact info data. }}
+    {{#if (not (eq (indexOf config 'Contact Info') false))}}
+      {{assign '_config.contact' true}}
+    {{else}}
+      {{assign '_config.contact' false}}
+    {{/if}}
 
-      {{! Determine if the staff has some subject area data. }}
-      {{#inArray config 'Subject Areas'}}
-        {{assign 'config.subjects' true}}
-        {{unassign (combine 'config.' (indexOf config 'Subject Areas'))}}
-      {{else}}
-        {{assign 'config.subjects' false}}
-      {{/inArray}}
+    {{! Determine if the staff has some subject area data. }}
+    {{#if (not (eq (indexOf config 'Subject Areas') false))}}
+      {{assign '_config.subjects' true}}
+    {{else}}
+      {{assign '_config.subjects' false}}
+    {{/if}}
 
-      {{! Determine if the librarian has some CV data. }}
-      {{#inArray config 'CV'}}
-        {{assign 'config.cv' true}}
-        {{unassign (combine 'config.' (indexOf config 'CV'))}}
-      {{else}}
-        {{assign 'config.cv' false}}
-      {{/inArray}}
+    {{! Determine if the librarian has some CV data. }}
+    {{#if (not (eq (indexOf config 'CV') false))}}
+      {{assign '_config.cv' true}}
+    {{else}}
+      {{assign '_config.cv' false}}
+    {{/if}}
+
+    {{! Override config data. }}
+    {{assign 'config' _config}}
+    {{unassign '_config'}}
 
     {{! Otherwise, handle config data given in string form. }}
     {{else}}
