--- a/src/engine/__environment__/layout/default.hbs
+++ b/src/engine/__environment__/layout/default.hbs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" http-equiv="">
 
-  <title>{{title}}</title>
+  <title>{{default system.title title}}</title>
   
   <link rel="stylesheet" href="{{baseUrl}}/css/style.min.css">
   
