--- a/src/engine/__environment__/layout/default.hbs
+++ b/src/engine/__environment__/layout/default.hbs
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" http-equiv="">
 
-  <title>{{title}}</title>
+  <title>{{default system.title title}}</title>
   
-  <link rel="stylesheet" href="{{baseUrl}}/css/style.min.css">
+  <link rel="stylesheet" href="http://template.library.emory.edu/styleguide/patternlibrary/releases/{{__meta__.package.version}}/css/style.min.css">
   
 </head>
 <body>
   
   <div id="eul-vue">{{template}}</div>
   
-  <script src="{{baseUrl}}/js/bundle.min.js"></script>
+  <script src="http://template.library.emory.edu/styleguide/patternlibrary/releases/{{__meta__.package.version}}/js/bundle.min.js"></script>
   
 </body>
 </html>
