--- a/src/patterns/__environment__/20-atoms/01-button~link.hbs
+++ b/src/patterns/__environment__/20-atoms/01-button~link.hbs
@@ -1,3 +1,7 @@
+{{#if (and (startsWithSubstring href '/') (not (startsWithSubstring href '//')))}}
+  {{assign 'href' (combine (baseUrl) href)}}
+{{/if}}
+
 <a href="{{href}}"
    role="button"
    class="button{{#if hollow}} -hollow{{/if}}{{#if pill}} -pill{{/if}}{{#if uncapitalize}} -uncapitalize{{/if}}{{#if (or hover focus)}} is-hover{{/if}}{{#if active}} is-active{{/if}}{{#if disabled}} is-disabled{{/if}}{{#if classes}} {{classes}}{{/if}}"{{#if disabled}} disabled{{/if}}
