--- a/src/patterns/__environment__/20-atoms/image.hbs
+++ b/src/patterns/__environment__/20-atoms/image.hbs
@@ -1,1 +1,5 @@
+{{#if (and (startsWithSubstring src '/') (not (startsWithSubstring src '//')))}}
+  {{assign 'src' (combine (baseUrl) src)}}
+{{/if}}
+
 <img src="{{src}}" alt="{{#unless decorative}}{{alt}}{{/unless}}" class="image{{#if width}} -w-{{width}}{{/if}}{{#if (and align (or (eq align 'left') (eq align 'right') (eq align 'center')))}} -{{align}}{{/if}}{{#if classes}} {{classes}}{{/if}}">
