--- a/src/patterns/__environment__/20-atoms/link.hbs
+++ b/src/patterns/__environment__/20-atoms/link.hbs
@@ -1,3 +1,7 @@
+{{#if (and (startsWithSubstring href '/') (not (startsWithSubstring href '//')))}}
+  {{assign 'href' (combine (baseUrl) href)}}
+{{/if}}
+
 <a href="{{href}}" class="link{{#if classes}} {{classes}}{{/if}}" target="{{default target '_self'}}">
   {{#if icon}}{{> tokens-icon id=icon }}{{/if}}
   {{label}}
