--- a/src/patterns/__environment__/30-molecules/card~button.hbs
+++ b/src/patterns/__environment__/30-molecules/card~button.hbs
@@ -1,3 +1,7 @@
+{{#if (and (startsWithSubstring href '/') (not (startsWithSubstring href '//')))}}
+  {{assign 'href' (combine (baseUrl) href)}}
+{{/if}}
+
 <a class="card-button{{#if (or hover focus)}} is-hover{{/if}}{{#if active}} is-active{{/if}}{{#if disabled}} is-disabled{{/if}}{{#if classes}} {{classes}}{{/if}}" href="{{href}}" target="{{default target '_self'}}"{{#if disabled}} disabled{{/if}}>
   {{label}}
 </a>
