Adds all of the CSS and templating changes

--- a/src/engine/__environment__/css/style.css
+++ b/src/engine/__environment__/css/style.css
@@ -13940,6 +13940,9 @@ button, input[type=button], input[type=submit], input[type=reset] {
 .landing-page-header, .landing-page-footer {
   border: 1px solid #B6BDCC;
 }
+.landing-page-main-subtitle {
+  text-align: center !important;
+}
 .material-page {
   grid-gap: 20px;
 }
