--- a/src/patterns/__environment__/30-molecules/card~library-aid.hbs
+++ b/src/patterns/__environment__/30-molecules/card~library-aid.hbs
@@ -1,5 +1,5 @@
 <div class="card-library-aid">
   <div class="card-library-aid-icon">{{> tokens-icon id='material-lightbulb_on'}}</div>
-  <div class="card-library-aid-context">{{default context 'Library Aid'}}</div>
+  <div class="card-library-aid-context">{{default context 'Research Help'}}</div>
   {{#with link}}{{> atoms-link label=../title classes='card-library-aid-title'}}{{/with}}
 </div>
