Adds passthrough of background-image.src as background-image

--- a/src/patterns/__environment__/60-templates/landing.hbs
+++ b/src/patterns/__environment__/60-templates/landing.hbs
@@ -143,7 +143,7 @@
     {{> organisms-intro-heading classes="landing-page-intro"}}
     {{> tokens-text type="lead" classes="landing-page-main-subtitle intro-subtitle" text=subtitle}}
     {{else}}
-    {{> organisms-intro-hero classes="landing-page-intro"}}
+    {{> organisms-intro-hero background-image=background-image.src classes="landing-page-intro"}}
     {{/if}}
 
     {{> organisms-main flow-content-box=main.flow-content-box wayfinder=main.wayfinder type="landing-page" classes="-dark without-intro"}}
